--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,16 +1,23 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
 <style>
   .container {
     width: 800px;
     font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+  
+    
   }
   span {
-    margin: 10px;
+    margin: 10px 0;
+    display: block;
   }
 </style>
+</head>
 
+<body>
 <div class="container">
   <img src="https://i.imgur.com/oUAKMC5.png" alt="">
   <span>Oi, {{name}}</span>
@@ -27,3 +34,8 @@
 
   <h3>Equipe | <strong>RentX</strong></h3>
 </div>
+</body>
+</html>
+
+
+
